--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* import font  */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body{
@@ -6,10 +7,13 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+/* card img  */
 .card img{
     width: 50%;
     margin: auto;
 }
+
+/* spinner  */
 #spinner{
     display: none;
 }
